test/Fail/Issue1436-22.err
Issue1436-22.agda:21.7-12: error: [AmbiguousParseForApplication]
Don't know how to parse • + •. Could mean any one of:
  _+_ • •
  c • •
Operators used in the grammar:
  + (infix operator, level 20) [_+_ (Issue1436-22.agda:7.5-8)]
  + (infix notation, level 20) [c (Issue1436-22.agda:13.5-6)] 
when scope checking • + •
